# canario-amarelo-versao-soberana

./: .gitignore  Dockerfile  README.md  canario.py  chat.py  example.function_inputs.json  flatten.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml
speckle_automate/: fixtures.py
speckle_automate_stub/: __init__.py  fixtures.py
tests/: test_function.py
