[project]
name = "speckle-automate-function"
version = "0.1.0"
requires-python = ">=3.11"
authors = [{ name = "Speckle Systems", email = "hello@speckle.systems" }]
maintainers = [{ name = "Speckle Systems", email = "hello@speckle.systems" }]
description = "A Speckle Automate function template using specklepy"
readme = "README.md"
license = "Apache-2.0"
keywords = ["speckle", "automate", "bim", "aec"]

dependencies = [
    "specklepy>=3.2.4",
    "openai>=1.0.0",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "mypy==2.1.0",
    "pytest==9.0.3",
    "ruff==0.15.16",
]

[tool.ruff]
exclude = [".venv", "**/*.yml"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    "D",  # pydocstyle
    "I",  # isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
py-modules = ["main", "flatten"]
packages = ["speckle_automate"]
